--- a/src/components/nested-menu/NestedMenu.css
+++ b/src/components/nested-menu/NestedMenu.css
@@ -1,5 +1,5 @@
 
-
+/**********  Header  ***********/
 .header {
    margin: 0;
    padding: 0;
@@ -16,7 +16,7 @@
   margin-right: 20px;
 }
 
-.header__navbarArea{
+.header__navbar-area{
   display: flex;
   align-items: center;
   max-width: 1200px;
@@ -24,38 +24,40 @@
   padding: 10px 20px;
 }
 
-.navbar{
+/******  Navigation Bar  *******/
 
-}
 .navbar__menus{
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   list-style: none;
 }
-.menuItems{
+
+
+/********  Menu Items  *********/
+.menu-items{
   position: relative;
   font-size: 14px;
 }
 
-.menuItems:hover{
+.menu-items:hover{
   background-color: #f2f2f2;
 }
 
 
-.menuItems {
+.menu-items {
   text-align: left;
   padding: 0.7rem 1rem;
 }
 
-.menuItems__noSubMenu{
+.menu-items__no-submenu{
   display: block;
   font-size: inherit;
   color: inherit;
   text-decoration: none;
 }
 
-.menuItems__subMenu{
+.menu-items__submenu{
   display: flex;
   align-items: center;
   color: inherit;
@@ -66,7 +68,7 @@
   width: 100%;
 }
 
-.menuItems__arrow::after{
+.menu-items--down-arrow::after{
   content: "";
   display: inline-block;
   margin-left: 0.28em;
@@ -75,6 +77,9 @@
   border-right: 0.32em solid transparent;
   border-left: 0.32em solid transparent;
 }
+
+
+/********  Drop Down  *********/
 
 .dropdown{
   position: absolute;
@@ -91,10 +96,6 @@
   display: none;
 }
 
-.dropdown__menuItems{
-  
-}
-
 .dropdown__submenu{
   position: absolute;
   left: 100%;
@@ -102,7 +103,7 @@
 
 }
 
-.dropdown__menuItems:hover{
+.dropdown__menu-items:hover{
   background-color: #f2f2f2;
 }
 .dropdown--show{
