--- a/src/components/contextAPI/smallApp.css
+++ b/src/components/contextAPI/smallApp.css
@@ -15,13 +15,14 @@
   border: 1px solid black;
 }
 
-.title {
+.header__title {
   text-align: center;
 }
 
 .nav {
   display: inline-block;
   width: 100%;
+  font-size: .9rem;
 }
 
 .nav__menuItem {
